--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
+    "build": "nest build && npm run copy:assets",
+    "copy:assets": "copyfiles -u 1 \"data/**/*\" dist/",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -21,9 +22,13 @@
     "migration:generate": "typeorm-ts-node-commonjs migration:generate -d src/data-source.ts",
     "migration:create": "typeorm-ts-node-commonjs migration:create",
     "migration:run": "typeorm-ts-node-commonjs migration:run -d src/data-source.ts",
+    "migration:run:prod": "node dist/data-source.js && typeorm migration:run -d dist/data-source.js",
     "migration:revert": "typeorm-ts-node-commonjs migration:revert -d src/data-source.ts",
+    "migration:revert:prod": "typeorm migration:revert -d dist/data-source.js",
     "migration:show": "typeorm-ts-node-commonjs migration:show -d src/data-source.ts",
-    "seed:update": "ts-node -r tsconfig-paths/register src/scripts/update-seed-data.ts"
+    "migration:show:prod": "typeorm migration:show -d dist/data-source.js",
+    "seed:update": "ts-node -r tsconfig-paths/register src/scripts/update-seed-data.ts",
+    "seed:update:prod": "node dist/scripts/update-seed-data.js"
   },
   "dependencies": {
     "@nestjs/config": "^4.0.0",
@@ -51,6 +56,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
+    "copyfiles": "^2.4.1",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
