--- a/AI/pyproject.toml
+++ b/AI/pyproject.toml
@@ -35,6 +35,15 @@ dependencies = [
   "supabase>=2.0.0",
   "openinference-instrumentation-google-adk>=0.1.0; python_version >= '3.11' and python_version < '3.14'",
   "openinference-instrumentation>=0.1.34",
+  "vercel>=0.3.8",
+  # FastAPI dependencies
+  "fastapi>=0.109.0",
+  "uvicorn[standard]>=0.27.0",
+  "sse-starlette>=1.6.5",
+  "python-multipart>=0.0.6",
+  "httpx>=0.27.0",
+  "mangum>=0.17.0",
+  "python-dotenv>=1.0.0"
 ]
 
 [tool.uv]
@@ -50,7 +59,8 @@ documentation = "https://google.github.io/lotara-docs/"
 [project.scripts]
 lotara_ai = "lotara.ai.main:main"
 
-
+[tool.vercel.scripts]
+build = "uv run build.py"
 # ------------------------------------------------------------------
 # OPTIONAL DEPENDENCIES (EXTRAS)
 # ------------------------------------------------------------------
@@ -79,11 +89,11 @@ agents = [
   "crewai[tools]; python_version>='3.11' and python_version<'3.12'",
 ]
 
-# Retrieval & indexing
-retrieval = [
-  "llama-index-readers-file>=0.4.0",
-  "llama-index-embeddings-google-genai>=0.3.0",
-]
+# # Retrieval & indexing
+# retrieval = [
+#   "llama-index-readers-file>=0.4.0",
+#   "llama-index-embeddings-google-genai>=0.3.0",
+# ]
 
 # Web / parsing tools
 web = [
@@ -110,24 +120,24 @@ test = [
   "openai>=1.100.2",
 ]
 
-# Documentation
-docs = [
-  "autodoc_pydantic",
-  "furo",
-  "myst-parser",
-  "sphinx",
-  "sphinx-autodoc-typehints",
-  "sphinx-rtd-theme",
-]
+# # Documentation
+# docs = [
+#   "autodoc_pydantic",
+#   "furo",
+#   "myst-parser",
+#   "sphinx",
+#   "sphinx-autodoc-typehints",
+#   "sphinx-rtd-theme",
+# ]
 
 # Tooling integrations
 toolbox = [
   "toolbox-adk>=0.5.7,<0.6.0",
 ]
 
-otel-gcp = [
-  "opentelemetry-instrumentation-google-genai>=0.3b0,<1.0.0",
-]
+# otel-gcp = [
+#   "opentelemetry-instrumentation-google-genai>=0.3b0,<1.0.0",
+# ]
 
 
 # ------------------------------------------------------------------
