--- a/backend/package.json
+++ b/backend/package.json
@@ -31,11 +31,12 @@
     "seed:update:prod": "node dist/scripts/update-seed-data.js"
   },
   "dependencies": {
-    "@nestjs/config": "^4.0.0",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "axios": "^1.13.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "pg": "^8.13.0",
