--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,3 +13,7 @@ PGADMIN_DEFAULT_PASSWORD=admin
 
 # Shared connection string for ORMs (TypeORM/Prisma/etc.)
 DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
+
+# Google Gemini API Key
+# Get your API key from: https://makersuite.google.com/app/apikey
+GEMINI_API_KEY=your-gemini-api-key-here
