--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,12 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
     "next": "15.5.9",
+    "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.3",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "recharts": "^3.6.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
