fix: upgrade ai agent workflow with rag engine tool

--- a/AI/.env.example
+++ b/AI/.env.example
@@ -15,12 +15,6 @@ API_PORT=8000
 API_WORKERS=4
 CORS_ORIGINS=http://localhost:3000,http://localhost:5173
 
-# ============================================
-# SECURITY (REQUIRED)
-# ============================================
-# Generate with: python -c "import secrets; print(secrets.token_urlsafe(32))"
-JWT_SECRET_KEY=your-secret-key-here-minimum-32-characters
-ACCESS_TOKEN_EXPIRE_MINUTES=30
 
 # ============================================
 # DATABASE (SUPABASE)
@@ -35,66 +29,21 @@ SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
 DATABASE_URL=postgresql://postgres:password@db.your-project-id.supabase.co:5432/postgres
 
 # ============================================
-# CACHE (Redis)
-# ============================================
-CACHE_ENABLED=true
-REDIS_URL=redis://localhost:6379
-CACHE_TTL=3600  # seconds (1 hour)
-
-# ============================================
-# MESSAGE QUEUE (RabbitMQ/Celery)
-# ============================================
-CELERY_BROKER=amqp://localhost:5672
-CELERY_BACKEND=redis://localhost:6379/1
-
-# ============================================
 # EXTERNAL APIS
 # ============================================
 # Opik (Observability)
 OPIK_API_KEY=your-opik-api-key
-OPIK_PROJECT=travel-lotara-prod
+OPIK_PROJECT=your-opik-project-name
+OPIK_WORKSPACE_NAME=your-opik-workspace-name
 
-# OpenAI
+# OpenAI or Google Gemini
 OPENAI_API_KEY=your-openai-api-key
 GEMINI_API_KEY=your-gemini-api-key
 
-# Amadeus (Flights)
-AMADEUS_API_KEY=your-amadeus-api-key
-AMADEUS_API_SECRET=your-amadeus-api-secret
+# VECTOR DATABASE (ChromaDB)
+CHROMADB_PERSIST_DIR=your-chromadb-persist-directory
+CHROMA_API_KEY=your-chroma-api-key
+CHROMA_TENANT=your-chroma-tenant-id
+CHROMA_DATABASE=your-chroma-database-name
 
-# ============================================
-# RESOURCE LIMITS
-# ============================================
-MAX_CONCURRENT_REQUESTS=100
-MAX_CONCURRENT_PER_USER=3
-REQUEST_TIMEOUT_SECONDS=600
-REQUEST_QUEUE_SIZE=1000
 
-# ============================================
-# RATE LIMITING
-# ============================================
-RATE_LIMIT_ENABLED=true
-RATE_LIMIT_PER_MINUTE=10
-RATE_LIMIT_PER_DAY=100
-
-# ============================================
-# COST MANAGEMENT
-# ============================================
-DEFAULT_MONTHLY_BUDGET_USD=100.0
-FREE_TIER_DAILY_REQUESTS=10
-PRO_TIER_DAILY_REQUESTS=100
-
-# ============================================
-# MONITORING
-# ============================================
-PROMETHEUS_ENABLED=true
-METRICS_PORT=9090
-LOG_LEVEL=INFO
-SENTRY_DSN=  # Optional: For error tracking
-
-# ============================================
-# FEATURE FLAGS
-# ============================================
-ENABLE_CACHING=true
-ENABLE_BACKGROUND_TASKS=true
-ENABLE_METRICS=true
