fix: decreasing the response  time

--- a/AI/.env.example
+++ b/AI/.env.example
@@ -38,12 +38,27 @@ OPIK_WORKSPACE_NAME=your-opik-workspace-name
 
 # OpenAI or Google Gemini
 OPENAI_API_KEY=your-openai-api-key
-GEMINI_API_KEY=your-gemini-api-key
+GOOGLE_GENAI_USE_VERTEXAI=FALSE
+GOOGLE_API_KEY=your-gemini-api-key
 
-# VECTOR DATABASE (ChromaDB)
-CHROMADB_PERSIST_DIR=your-chromadb-persist-directory
-CHROMA_API_KEY=your-chroma-api-key
-CHROMA_TENANT=your-chroma-tenant-id
-CHROMA_DATABASE=your-chroma-database-name
+# ============================================
+# VECTOR DATABASE (Milvus / Zilliz Cloud)
+# ============================================
+# Option 1: Use Zilliz Cloud (Free tier available - recommended)
+# Get your credentials from: https://cloud.zilliz.com/
+# 1. Create a free cluster
+# 2. Get the URI from cluster details (e.g., https://xxx.api.gcp-us-west1.zillizcloud.com)
+# 3. Get API Key from "API Keys" section
+ZILLIZ_CLOUD_URI=https://your-cluster.api.region.zillizcloud.com
+ZILLIZ_CLOUD_API_KEY=your-zilliz-api-key
+
+# Option 2: Use Milvus Lite (Local embedded database)
+# Leave ZILLIZ_CLOUD_URI and ZILLIZ_CLOUD_API_KEY empty to use Milvus Lite
+# No configuration needed - automatically creates milvus_lotara.db file
+
+# ============================================
+# LOGGING
+# ============================================
+LOG_LEVEL=INFO  # DEBUG, INFO, WARNING, ERROR
 
 
