--- a/AI/pyproject.toml
+++ b/AI/pyproject.toml
@@ -43,7 +43,9 @@ dependencies = [
   "python-multipart>=0.0.6",
   "httpx>=0.27.0",
   "mangum>=0.17.0",
-  "python-dotenv>=1.0.0"
+  "python-dotenv>=1.0.0",
+  "chromadb>=1.2.0",
+  "pymilvus>=2.4.0",
 ]
 
 [tool.uv]
