--- a/AI/requirements.txt
+++ b/AI/requirements.txt
@@ -19,7 +19,7 @@ beautifulsoup4>=3.2.2
 lxml>=5.3.0
 
 # === VECTOR DATABASE ===
-chromadb>=0.5.0
+pymilvus>=2.4.0
 
 # === OPENTELEMETRY INSTRUMENTATION ===
 opentelemetry-instrumentation-google-genai>=0.3b0
