chore: remove unessential files

--- a/AI/.env.example
+++ b/AI/.env.example
@@ -35,6 +35,7 @@ DATABASE_URL=postgresql://postgres:password@db.your-project-id.supabase.co:5432/
 OPIK_API_KEY=your-opik-api-key
 OPIK_PROJECT=your-opik-project-name
 OPIK_WORKSPACE_NAME=your-opik-workspace-name
+OPIK_EVAL_PROJECT=your-opik-eval-project-name
 
 # OpenAI or Google Gemini
 OPENAI_API_KEY=your-openai-api-key
